[package]
name = "wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
js-sys = "0.3.61"
wasm-bindgen = "0.2.84"

[dependencies.tetris]
path = "../core"

[dependencies.getrandom]
version = "0.2.8"
features = ["js"]

[dependencies.web-sys]
version = "0.3.61"
features = [
  "Window",
  "Document",
  "Node",
  "Element",
  "Text",
  "console",
]
